<resources>
    <string name="app_name">Tic Tac Toe 9x9</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Buttons -->
    <string name="button_join_room">Join</string>
    <string name="content_description_board_button">Field on the board</string>

    <!-- Labels -->
    <string name="label_join_room">Join Room</string>
    <string name="hint_room_name">Room name</string>
    <string name="label_active_player_you">Your turn</string>
    <string name="label_active_player_opponent">Opponent\'s turn</string>
    <string name="label_player_you">You: </string>
    <string name="label_winner">Winner: </string>
    <string name="label_tie">Tie</string>

    <!-- Dialogs -->
    <string name="dialog_join_title">Joining Room</string>
    <string name="dialog_join_description">Waiting for an opponent</string>
    <string name="dialog_version_title">Software information</string>
    <string name="dialog_version_label_name">name: </string>
    <string name="dialog_version_label_author">author: </string>
    <string name="dialog_version_label_version">version: </string>
    <string name="dialog_version_label_full_name">full name: </string>
    <string name="dialog_version_label_protocol_version">protocol version: </string>
    <string name="dialog_version_label_nick">nick: </string>
    <string name="dialog_version_label_full_nick">full nick: </string>
    <string name="dialog_debug_title_error">Error</string>
    <string name="dialog_debug_title_debug">Debug</string>

    <!-- Warnings -->
    <string name="warning_invalid_board">Invalid board</string>
    <string name="warning_invalid_stt">Invalid STT Packet</string>
    <string name="warning_connection_error">Connection error</string>


    <!-- Preference Titles -->
    <string name="connection_header">Connection</string>
    <string name="appearance_header">Appearance</string>
    <string name="developer_header">Developer options</string>

    <!-- Preference keys -->
    <string name="key_ip" translatable="false">key_ip</string>
    <string name="key_port" translatable="false">key_port</string>
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="key_notifications" translatable="false">key_notifications</string>
    <string name="key_debug_info" translatable="false">key_dev</string>

    <!-- Connection Preferences -->
    <string name="ip_title">Server address</string>
    <string name="port_title">Server port</string>
    <string name="default_ip" translatable="false">85.198.250.135</string>
    <string name="default_port" translatable="false">4780</string>

    <!-- Appearance Preferences -->
    <string name="theme_title">Theme</string>
    <string name="theme_name_light">Light</string>
    <string name="theme_name_dark">Dark</string>
    <string name="theme_value_light" translatable="false">AppTheme</string>
    <string name="theme_value_dark" translatable="false">AppThemeDark</string>
    <string name="notifications_title">Round Notifications</string>
    <string name="notifications_name_all">Sound and vibration</string>
    <string name="notifications_name_sound">Sound</string>
    <string name="notifications_name_vibration">Vibration</string>
    <string name="notifications_name_none">None</string>
    <string name="notifications_value_all" translatable="false">All</string>
    <string name="notifications_value_sound" translatable="false">Sound</string>
    <string name="notifications_value_vibration" translatable="false">Vibration</string>
    <string name="notifications_value_none" translatable="false">None</string>

    <!-- Developer Preferences -->
    <string name="debug_info_title">Debug data</string>
    <string name="debug_info_description">Shows errors and debug data</string>

</resources>
