<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/connection_header">

        <EditTextPreference
            app:key="@string/key_ip"
            app:title="@string/ip_title"
            app:defaultValue="@string/default_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/key_port"
            app:title="@string/port_title"
            app:defaultValue="@string/default_port"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:key="@string/key_theme"
            app:defaultValue="@string/theme_value_light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/key_notifications"
            app:defaultValue="@string/notifications_value_sound"
            app:entries="@array/notifications_entries"
            app:entryValues="@array/notifications_values"
            app:title="@string/notifications_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
