<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_name" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_author" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_version" />

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_full_name" />

    <TextView
        android:id="@+id/textViewProtocolVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_protocol_version" />

    <TextView
        android:id="@+id/textViewNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_nick" />

    <TextView
        android:id="@+id/textViewFullNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_version_label_full_nick" />
</LinearLayout>